--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=WatchListApplication
+spring.datasource.url=jdbc:mysql://localhost:3306/watchlist?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=Shreya167#
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
